fix: overflow for markdown editor

--- a/styles/markdown-editor.css
+++ b/styles/markdown-editor.css
@@ -1,4 +1,3 @@
-.remirror-editor-wrapper,
 .remirror-editor {
   height: 100%;
   position: relative;
